@startuml

class Task {
  +String id
  +String title
  +String description
  +String assignee
  +String dueDate
  +String priority
  +String status
  +String createdAt
  +String updatedAt
}

class TaskStore {
  -String filePath
  +list()
  +create(input)
  +update(id, changes)
  +remove(id)
  +clear()
}

class ValidationError {
  +Array errors
}

class NotFoundError {
  +String id
}

class ServerApi {
  +GET /api/tasks
  +POST /api/tasks
  +PUT /api/tasks/{id}
  +DELETE /api/tasks/{id}
}

ServerApi --> TaskStore
TaskStore "1" --> "0..*" Task
TaskStore ..> ValidationError
TaskStore ..> NotFoundError

@enduml
